--- a/estilo.css
+++ b/estilo.css
@@ -6,28 +6,28 @@ body {
   font-family: Verdana, Tahoma, sans-serif;
 }
 header {
-  background-color: #1f0e61;
+  background-color: #6ccad6;
 }
 #topo {
-  width: 900px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   margin: auto; /*Margin: auto -> estratégia para centralizar uma div*/
 }
 header h1 {
   text-transform: uppercase;
   font-style: italic;
-  font-size: 75px;
-  color: #fece1e;
+  font-size: 20px;
+  color: white;
   letter-spacing: 12px;
-  line-height: 70px;
-  width: 600px;
+  line-height: 50px;
+  width: 50px;
   float: left;
   padding: 60px 0 30px;
 }
 header p {
   color: #fff;
   font-size: 20px;
-  width: 600px;
+  width: 300px;
   float: left;
 }
 header img {
@@ -36,7 +36,7 @@ header img {
 main h2 {
   text-align: center;
   padding: 30px 0 40px;
-  color: #036b30;
+  color: #6b3203;
   font-size: 32px;
   letter-spacing: 2px;
 }
@@ -64,14 +64,14 @@ main h2 {
   text-align: center;
   margin: 15px 0 20px;
   font-weight: bold;
-  color: #222522;
+  color: #6333b1;
 }
 footer {
-  background-color: #1f0e61;
+  background-color: white;
   text-align: center;
   font-style: italic;
   color: #fff;
-  padding: 20px 0;
+  padding: 10px 0;
 }
 
 /* Páginas internas */
