--- a/estilo.css
+++ b/estilo.css
@@ -17,7 +17,7 @@ header h1 {
   text-transform: uppercase;
   font-style: italic;
   font-size: 20px;
-  color: white;
+  color: #6ccad6;
   letter-spacing: 12px;
   line-height: 50px;
   width: 50px;
@@ -25,7 +25,7 @@ header h1 {
   padding: 60px 0 30px;
 }
 header p {
-  color: #fff;
+  color: #6ccad6;
   font-size: 20px;
   width: 300px;
   float: left;
